# My-website

./: .cfignore  .env.example  .gitignore  .npmrc  CNAME  Cargo.toml  README.md  cloudflare-worker.js  deploy-master.ps1  deploy.ps1  dev.ps1  first-deploy.ps1  index.html  package-lock.json  package.json  spotify-worker.js  spotify-worker.ts  tailwind.config.js  tsconfig.json  tsconfig.worker.json  vite.config.ts  wrangler.toml
.github/: FUNDING.yml
.unused/: LoginPage.tsx  ParallaxPage.tsx  SwitchNotification.tsx  SystemStatus.tsx
functions/api/: health.js  lastfm.js  repos.js
my-website/: package-lock.json
my-website/public/: index.html
my-website/servers/: server.js
old-frontend-src/: App.tsx  reportWebVitals.tsx
old-frontend-src/components/: ErrorBoundary.tsx  Navbar.tsx
old-frontend-src/styles/: App.css  EndOSBootAnimation.css  FoxCard.css  GithubRepos.css  base.css  game.css
old-frontend-src/types/: index.ts
pages/: navbar.html  style.css
public/: index.html  manifest.json  rolling-effects.css
public/pages/: github-repos.html  navbar.html  style.css
public/scripts/: spotify.js  theme-toggle.js
scripts/: github-repos.js
servers/: server.js
src/: App.css  App.js  App.tsx  env.d.ts  index.tsx  main.rs  reportWebVitals.tsx  rolling-effects.css  setupTests.js  templates.rs
src/api/: github.rs  health.rs  lastfm.rs  mod.rs
src/components/: EndOSBootAnimation.tsx  ErrorBoundary.js  ErrorBoundary.tsx  FoxCar.js  (+23 more)
static/: boot-animation.css  styles.css
templates/: 404.html  about.html  base.html  projects.html
well-known/: discord
(+54 files in other folders)
