[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"
description = "Personal website built with Rust and Actix-web"
authors = ["EndofTimee"]
default-run = "personal-site"

[[bin]]
name = "personal-site"
path = "src/main.rs"

[[bin]]
name = "static-gen"
path = "src/bin/static_gen.rs"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
askama = "0.12"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

[profile.release]
lto = true
opt-level = 3
